--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 33
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.monstertechno.loginsignupui"
+        applicationId "com.example.easy_go"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 }
